<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="10dp"
    android:background="@color/blue_dark"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/popup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="8"
            android:text="Money Tree"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_close_popup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:background="@drawable/ic_close_btn"
            android:gravity="end" />

    </LinearLayout>


    //ROUND 12 DETAILS

    <LinearLayout
        android:id="@+id/round12Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round12Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="12"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round12Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round12Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 11 PRIZE

    <LinearLayout
        android:id="@+id/round11Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round11Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="11"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round11Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round11Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 10 DETAILS

    <LinearLayout
        android:id="@+id/round10Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round10Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="10"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round10Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round10Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    //ROUND 9 PRIZE

    <LinearLayout
        android:id="@+id/round9Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round9Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="9"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round9Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round9Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    //ROUND 8 PRIZE

    <LinearLayout
        android:id="@+id/round8Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round8Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="8"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round8Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round8Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 7 PRIZE

    <LinearLayout
        android:id="@+id/round7Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round7Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="7"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round7Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round7Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 6 PRIZE

    <LinearLayout
        android:id="@+id/round6Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round6Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round6Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round6Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 5 PRIZE

    <LinearLayout
        android:id="@+id/round5Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round5Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round5Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round5Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 4 DETAILS

    <LinearLayout
        android:id="@+id/round4Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round4Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round4Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round4Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


    //ROUND 3 DETAILS

    <LinearLayout
        android:id="@+id/round3Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round3Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round3Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round3Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    //ROUND 2 DETAILS

    <LinearLayout
        android:id="@+id/round2Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round2Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round2Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round2Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    //ROUND 1 DETAILS

    <LinearLayout
        android:id="@+id/round1Det"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:gravity="fill_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:id="@+id/round1Lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/round1Money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/round1Prize"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>